package Product;

public abstract class Connection {
    public abstract void myname();
}
