package Product;

public class MysqlConnection extends Connection{
    @Override
    public void myname() {
        System.out.println("MysqlConnection");
    }
}
