package Product;

public class MysqlStatement extends Statement{
    @Override
    public void myname() {
        System.out.println("MysqlStatement");
    }
}
