package Product;

public class OracleConnection extends Connection{
    @Override
    public void myname() {
        System.out.println("OracleConnection");
    }
}
