package Product;

public abstract class Statement {
    public abstract void myname();
}
